modal overflow fixed

--- a/src/components/PrivateRoute/styles.css
+++ b/src/components/PrivateRoute/styles.css
@@ -3,7 +3,5 @@
 }
 
 .modalActive {
-  position: fixed;
-  width: 100%;
   overflow: hidden;
 }
