--- a/src/views/partitions/Modal/styles.css
+++ b/src/views/partitions/Modal/styles.css
@@ -4,10 +4,12 @@
   left: 0;
   width: 100%;
   height: 100%;
+  overflow: auto;
   background-color: rgba(0,0,0,.8);
   animation-name: fadeIn;
   animation-duration: .5s;
   animation-fill-mode: forwards;
+  z-index: 999;
 }
 
 .filter {
